--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div id="header">
             <a href="" id="logo"><img src="images/logoo.jpg" width="120px"></a>
             <ul id="main_menu">
-                <li><a href="#"> Giới Thiệu</a></li>
-                <li><a href="#"> Tin Tức</a></li>
-                <li><a href="#"> Liên Hệ</a></li>
+                <li><a href="index.html"> Giới Thiệu</a></li>
+                <li><a href="tintuc.html"> Tin Tức</a></li>
+                <li><a href="lienhe.html"> Liên Hệ</a></li>
             </ul>
         </div>
     </header>
     <div class="clear"></div>
     <hr>
     <div id="banner">
-        <img src="images/logo1.jpg" alt="" width="100%">
+        <img src="images/logo1.png" alt="" width="100%" height="600px>
     </div>
     <div class="clear"></div>
     <hr>
@@ -94,9 +94,9 @@
         </div>
         <div id="footer1">
             <pre>
-                <b>Địa Chỉ: Ngõ 449 Đường Cổ Nhuế Quận Bắc Từ Niêm Thành Phố Hà Nội</b>
+                <b>Địa Chỉ: Ngõ 521 Đường Cổ Nhuế Quận Bắc Từ Niêm Thành Phố Hà Nội</b>
                 <b>Email: hoangthithu25102000@gmail.com</b>
-                <b>Số Điện Thoại : 0327742576</b>
+                <b>Số Điện Thoại : 0123456789</b>
                 <b>© Copyright 2020 - Bản quyền thuộc về chúng tôi</b>
             </pre>
         </div>
